<resources>
    <string name="app_name">Calculadora_JML</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="divsign">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mulsign">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minussign">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plussign">+</string>
    <string name="spanishdecimalsign">,</string>
    <string name="equalsign">=</string>
</resources>